tests/transpiler/x/rs/nested_function.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
fn outer(x: i64) -> i64 {
    fn inner(y: i64) -> i64 {
    return (x + y)
};
    return inner(5)
}

fn main() {
    println!("{}", outer(3));
}
